--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -18,7 +18,7 @@ div.home-icons a.icon:hover{
 img.myimage {
     width: 30rem;
     height: 30rem;
-    animation: slide-in 1s ease-in-out;
+    /* animation: slide-in 1s ease-in-out; */
 }
 @media (max-width:820px){
     img.myimage {
@@ -31,14 +31,14 @@ div.home-left {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    animation: slide-right 1s ease-in-out;
+    /* animation: slide-right 1s ease-in-out; */
 }
 div.home-left > *{
     margin-left:2rem ;
 }
 .about-me-right{
     
-    animation: slide-left 1s ease-in-out;
+    /* animation: slide-left 1s ease-in-out; */
 }
 
 @media (max-width:820px) {
@@ -56,7 +56,7 @@ h1 {
 .typing-effect {
     overflow: hidden;
     white-space: nowrap;
-    animation: typing-effect 2s steps(60) infinite;
+    /* animation: typing-effect 2s steps(60) infinite; */
 
 }
 
