--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -4,15 +4,25 @@
     box-sizing: border-box;
   }
 
+#home {
+    
+        height: 100vh;
+        max-height: 50rem;
+        display: flex;
+        justify-content: center;
+}
 div.home-icons a{
     background-color: var(--bg-color);
     color: var(--text-color);
     text-decoration: none;
-    margin:0 0.5rem;
+    margin:0 0.8rem;
     font-size: 2.5rem;
     opacity: 0.7;
+    display: block;
 }
 div.home-icons a.icon:hover{
+    transform: translateY(-6px);
+    transition: 0.3s;
     opacity: 1;
 }
 img.myimage {
@@ -29,6 +39,7 @@ img.myimage {
 div.home-left {
     display: flex;
     flex-direction: column;
+    gap: 4px;
     justify-content: center;
     align-items: flex-start;
     /* animation: slide-right 1s ease-in-out; */
@@ -36,10 +47,7 @@ div.home-left {
 div.home-left > *{
     margin-left:2rem ;
 }
-.about-me-right{
-    
-    /* animation: slide-left 1s ease-in-out; */
-}
+
 
 @media (max-width:820px) {
     div.home-left {
@@ -59,4 +67,28 @@ h1 {
     /* animation: typing-effect 2s steps(60) infinite; */
 
 }
+
+
+a.certificate-btn {
+    text-decoration: none;
+    display: block;
+    background-color: var(--second);
+    color: var(--bg-color);
+    border-style: solid;
+    border-color: var(--text-color);
+    border-width: 2px;
+    border-radius: 0.4rem;
+    padding: 1rem;
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+
+}
+
+a.certificate-btn:hover {
+
+    transform: scale(1.01);
+    transition: 0.1s;
+    
+}
+
 
